[metadata]
name = NoUI
version = 0.0.1
description = Library to create full applications using commands rather than an User Interface
url = https://www.github.com/AcrylicMarlin/NoUI
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.md



[options]
packages = NoUI
